2009-09-23  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/i386.exp: Run localpic.

	* gas/i386/localpic.d: New.
	* gas/i386/localpic.s: Likewise.

2009-09-23  Alan Modra  <amodra@bigpond.net.au>

	* gas/arm/thumbver.d: Tolerate some whitespace differences.
	* gas/elf/elf.exp: Likewise.
	* gas/elf/section2.e: Likewise.
	* gas/elf/section2.e-armeabi: Likewise.
	* gas/elf/section2.e-armelf: Likewise.
	* gas/elf/section2.e-m32r: Likewise.
	* gas/elf/section2.e-mips: Likewise.
	* gas/elf/section2.e-miwmmxt: Likewise.
	* gas/elf/section2.e-score: Likewise.
	* gas/elf/section2.e-xtensa: Likewise.
	* gas/elf/type-noifunc.e: Likewise.
	* gas/elf/type.e: Likewise.
	* gas/ia64/alias-ilp32.d: Likewise.
	* gas/ia64/alias.d: Likewise.
	* gas/ia64/global.d: Likewise.
	* gas/mips/mips16-vis-1.d: Likewise.
	* gas/mmix/bspec-1.d: Likewise.
	* gas/mmix/byte-1.d: Likewise.
	* gas/mmix/comment-1.d: Likewise.
	* gas/mmix/loc-1.d: Likewise.
	* gas/mmix/loc-2.d: Likewise.
	* gas/mmix/loc-3.d: Likewise.
	* gas/mmix/loc-4.d: Likewise.
	* gas/mmix/loc-5.d: Likewise.
	* gas/mmix/loc-6.d: Likewise.
	* gas/mmix/loc-7.d: Likewise.

2009-09-22  Alan Modra  <amodra@bigpond.net.au>

	* gas/ppc/a2.d: Match PPC64 relocs.

2009-09-21  Maciej W. Rozycki  <macro@linux-mips.org>

	* lib/gas-defs.exp (gas_test_error): Mark internal error/assertion
	failures seen in output as fails.  Also record output being
	matched for fails.

2009-09-21  Maciej W. Rozycki  <macro@linux-mips.org>

	* gas/mips/eret-1.d: Adjust regexps for robustness.
	* gas/mips/eret-2.d: Likewise.
	* gas/mips/eret-3.d: Likewise.
	* gas/mips/eret-1.s: Reformat for readability.  Add a label
	at the beginning.
	* gas/mips/eret-2.s: Add a label at the beginning.

2009-09-21  Maciej W. Rozycki  <macro@linux-mips.org>

	* gas/mips/eret-1.s: Add trailing padding.
	* gas/mips/eret-2.s: Likewise.
	* gas/mips/eret-3.s: Likewise.
	* gas/mips/eret-1.d: Adjust accordingly.  Force a 32-bit ABI.
	* gas/mips/eret-2.d: Likewise.