@@ -1,5 +1,9 @@
 2009-09-23  H.J. Lu  <hongjiu.lu@intel.com>
 
+	* gas/i386/localpic.d: Updated.
+
+2009-09-23  H.J. Lu  <hongjiu.lu@intel.com>
+
 	* gas/i386/i386.exp: Run localpic.
 
 	* gas/i386/localpic.d: New.
